add scala op hbase

--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,12 @@
             <version>2.3.0</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.apache.hbase/hbase-client -->
+        <dependency>
+            <groupId>org.apache.hbase</groupId>
+            <artifactId>hbase-client</artifactId>
+            <version>1.4.1</version>
+        </dependency>
 
     </dependencies>
 
