--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,15 @@
             <version>1.4.1</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.apache.hbase/hbase-server -->
+        <dependency>
+            <groupId>org.apache.hbase</groupId>
+            <artifactId>hbase-server</artifactId>
+            <version>1.4.1</version>
+        </dependency>
+
+
+
     </dependencies>
 
 
